--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 DOMAIN=djenkoit.fr
-
-TRAEFIK_VERSION=latest
 POSTGRES_VERSION=14-alpine
-SYNAPSE_VERSION=v1.84.1
+SYNAPSE_VERSION=latest
 COTURN_VERSION=latest
 ELEMENT_VERSION=latest
