--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   synapse:
     image: "docker.io/matrixdotorg/synapse:${SYNAPSE_VERSION}"
     restart: unless-stopped
-    environment:
-      - SYNAPSE_CONFIG_PATH=/data/homeserver.yaml
     volumes:
-      - synapse_data:/data
+      - .synapse_data:/data
     depends_on:
       - synapse_db
     networks:
